force-app/main/default/objects/Brokerage_Receipt__c/Brokerage_Receipt__c.object-meta.xml
<CustomObject>
    <label>Brokerage Receipt</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Brokerage Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>