force-app/main/default/objects/Brokerage_Receipt__c/fields/Accounting_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Document_No__c</fullName>
    <label>Accounting Document No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>