force-app/main/default/objects/Brokerage_Receipt__c/fields/Brokerage_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Invoice__c</fullName>
    <label>Brokerage Invoice</label>
    <referenceTo>Brokerage_Invoice__c</referenceTo>
    <relationshipLabel>Brokerage Receipts</relationshipLabel>
    <relationshipName>Brokerage_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>