force-app/main/default/objects/Brokerage_Receipt__c/fields/Clearing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Document_Number__c</fullName>
    <label>Clearing Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>