force-app/main/default/objects/Brokerage_Receipt__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>