force-app/main/default/objects/Brokerage_Receipt__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>