force-app/main/default/objects/Brokerage_Receipt__c/fields/SAP_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Broker_Code__c</fullName>
    <label>SAP Broker Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>