force-app/main/default/objects/Brokerage_Receipt__c/fields/SAP_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice_Number__c</fullName>
    <label>SAP Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>