force-app/main/default/objects/Brokerage_Receipt__c/fields/SAP_s_CP_code__c.field-meta.xml
<CustomField>
    <fullName>SAP_s_CP_code__c</fullName>
    <formula>Brokerage_Invoice__r.Channel_Partner__r.SAP_CP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP&apos;s CP code</label>
    <type>Text</type>
</CustomField>