force-app/main/default/objects/Brokerage_Receipt__c/fields/SFDC_Invoice_reference__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Invoice_reference__c</fullName>
    <label>SFDC Invoice reference</label>
    <length>60</length>
    <type>Text</type>
</CustomField>