force-app/main/default/objects/Brokerage_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brokerage_Invoice__c</columns>
    <columns>SAP_Invoice_Number__c</columns>
    <columns>Accounting_Document_No__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Clearing_Date__c</columns>
    <columns>SAP_Company_Code__c</columns>
    <columns>SAP_Broker_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>